fixed the gaps in smaller screen

--- a/_smallscreen.scss
+++ b/_smallscreen.scss
@@ -76,8 +76,8 @@ aside>div>div,
 footer {
     background: rgba(128, 128, 128, 0.9);
     border-radius: 15px;
-    margin: 10px;
-    padding: 15px;
+    margin: 8px;
+    padding: 8px;
 }
 
  ul{
